--- a/ios/RNCallkitSample/Info.plist
+++ b/ios/RNCallkitSample/Info.plist
@@ -35,6 +35,10 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>blue</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>blue peripheral</string>
 	<key>NSCameraUsageDescription</key>
 	<string>camera</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
