--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,7 @@ target 'RNCallkitSample' do
     # we make it explicit here to aid in the React Native upgrade process.
     :hermes_enabled => flags[:hermes_enabled],
     # :hermes_enabled => false,
+    # :hermes_enabled => false,
     :fabric_enabled => flags[:fabric_enabled],
     # Enables Flipper.
     #
