--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-agora": "^4.1.2",
-    "react-native-chat-callkit": "../react-native-chat-library/packages/react-native-chat-callkit",
-    "react-native-chat-sdk": "1.1.2-beta.3",
+    "react-native-chat-callkit": "0.1.1-beta.3",
+    "react-native-chat-sdk": "1.1.2",
     "react-native-device-info": "^10.4.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-permissions": "^3.6.1",
